tests/valid/module_b.m
%---------------------------------------------------------------------------%
% vim: ts=4 sw=4 et ft=mercury
%---------------------------------------------------------------------------%

:- module module_b.
:- interface.

:- use_module module_c.
:- type module_b__foo == module_c__foo.
